2014-01-07  Titus Brown  <t@Titus-MacBook-Air-2.local>

 * Initialized repository, created server.py and README.

2014-01-14 Duncan Young <youngdun@arctic.cse.msu.edu>
 * Return HTTP response to client

2014-01-22 Duncan Young <youngdun@arctic.cse.msu.edu>
 * Added test_server.py for automated testing.
 * Return different responses for /, /content, /file, and /image paths.
 * Differentiate between GET and POST requests.

2014-01-29
 * Added support for HTML forms, using both GET and POST.

2014-03-20
 * Completed hw8
 * Tried deathly hard to implement a thumbnails page to no avail
 * /thumbnails url works, but pictures don't load. Dictionary
 * creates, but doesn't pass the information to the html template?
 * I'm still very lost in this, and don't entirely understand what's going on.

2014-3-20
 * Pics load invididually at /pics/%imagename%, but I can't get the thumbnails.html page to load all the content
 * the thumbnails.html page loads the header block, but not the content block.
 * Ran out of time!

2014-03-26
 * Thumbnail page works! if you load myapp and go to /thumbnails it loads all
 * the pictures in the /images folder.
 
2014-4-20
 * Commenting on images
 * Test data set for testing metadata

2014-4-22
 * Implemented a Css!
 * Thanks to Cam Keif for helping me with this...

2014-4-22
 * AJAX upload works!
 * MiddleWare Playback works!
 


 Projects Completed:
 4) Imageappp works with all filetypes
 5) Add a Thumbnails url (/thumbnails)
 23) Images can be viewed as their own url
 8)    Commenting on Images
 24)   Test data set for testing metadata
 3) Implemented a CSS
    AJAX upload
    Middleware Playback